--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue</title>
+    <!-- Boxicons CDN, letakkan di index.html untuk produksi -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script> 
-    <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
-<style>
-  html {
-    scroll-behavior: smooth;
-  }
-</style>
-
