--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Vite + Vue</title>
     <!-- Boxicons CDN, letakkan di index.html untuk produksi -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- AOS CSS -->
+    <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       html {
@@ -17,5 +19,10 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script> 
+    <!-- AOS JS -->
+    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
